# average-reward-drl

./: .gitignore  README.md  pyproject.toml
average_reward_drl/: __init__.py  algorithm.py  dmc_wrapper.py  logger.py  modules.py  replay_buffer.py  train.py  utils.py
average_reward_drl/algorithms/: aro_ddpg.py  aro_ddpg_with_reset.py  our_aro_ddpg.py  reset_cost.py  rvi_sac.py  rvi_sac_with_fixed_reset_cost.py  rvi_sac_with_reference.py  sac.py  sac_with_reset.py
conf/: default.yaml
examples/: example_replay_buffer.py  example_speed_test.py
experiments/: exp_aro_ddpg.py  exp_rvi_sac.py  main.py
experiments/conf/: config.yaml
experiments/conf/algo/: aro_ddpg.yaml  aro_ddpg_with_reset.yaml  common.yaml  rvi_sac.yaml  rvi_sac_with_fixed_reset_cost.yaml  rvi_sac_with_reference.yaml  sac.yaml  sac_with_reset.yaml
experiments/conf/env/: Ant-v4.yaml  Hopper-v4.yaml  cheetah_run.yaml  default_dm_control.yaml  default_gymnasium.yaml  finger_spin.yaml  fish_upright.yaml  hopper_hop.yaml  quadruped_run.yaml  walker_run.yaml  walker_walk.yaml
experiments/conf/env/dm_control/: acrobot_swingup.yaml  acrobot_swingup_sparse.yaml  ball_in_cup_catch.yaml  cartpole_balance.yaml  cartpole_balance_sparse.yaml  cartpole_swingup.yaml  cartpole_swingup_sparse.yaml  cartpole_three_poles.yaml  cartpole_two_poles.yaml  dog_fetch.yaml  dog_run.yaml  dog_stand.yaml  dog_trot.yaml  dog_walk.yaml  finger_spin.yaml  (+33 more)
experiments/dm_control/: exp_rvi_sac.py  exp_sac.py
experiments/gymnasium/: exp_rvi_sac.py
scripts/: throw_jobs.gpucluster.pbs  throw_jobs.sh
tsubame/: throw_jobs.sh
(+6 files in other folders)
