[tool.poetry]
name = "average-reward-drl"
version = "0.1.0"
description = ""
authors = ["Y.Hisaki <yhisaki31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
hydra-core = "^1.3.2"
wandb = "^0.15.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
